--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
     <nav>
       <ul>
         <li class="active"><a href="">Todos</a></li>
-        <li class=""><a href="">Carros de luxo</a></li>
-        <li class=""><a href="">Carros Novo</a></li>
-        <li class=""><a href="">Usados ou Seminovos</a></li>
+        <li class=""><a href="">SUV</a></li>
+        <li class=""><a href="">SEDÃ</a></li>
+        <li class=""><a href="">HATCH</a></li>
       </ul>
     </nav>
     <section
       class="banner"
-      style="background-image: url('')"
+      style="background-image: url('assets/images/banner.')"
     >
       Todos os modelos
     </section>
@@ -123,18 +123,7 @@
         <div class="item--color">Cor: Cinza</div>
         <div class="item--genre">Carroceria: SUV</div>
       </div>
-      <div class="item">
-        <img src="assets/images/gla.jpg" class="item--image" />
-        <div class="item--name">MERCEDES-BENZ GLA 200</div>
-        <div class="item--color">Cor: Cinza</div>
-        <div class="item--genre">Carroceria: SUV</div>
-      </div>
-      <div class="item">
-        <img src="assets/images/gla.jpg" class="item--image" />
-        <div class="item--name">MERCEDES-BENZ GLA 200</div>
-        <div class="item--color">Cor: Cinza</div>
-        <div class="item--genre">Carroceria: SUV</div>
-      </div>
+  
     </div>
 
     <footer class="container">Feito com ❤ por Eliel</footer>
